Se arreglo el bug imagen

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ main{
     padding: 30px;
 }
 figure{
-    height: 200px;
+    min-height: 200px;
     width: 200px;
     margin-bottom: 20px;
     position: relative;
